Add Jacoco and PIT